# auditex

./: ._pytest.ini  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  SOUL.md  THIRD_PARTY_NOTICES.md  improvement.md  license.md  pyproject.toml  pytest.ini
.claude/: settings.json
agent/: agent-prompt.md  tenant-audit-skill.json
benchmarks/: fake_graph_benchmark.py
configs/: collector-definitions.json  collector-permissions.json  collector-presets.json  control-mappings.json  finding-templates.json  report-sections.json  rule-packs.json  tenant-audit.example.env
docs/: OUTPUT_CONTRACT.md  RELEASE_CHECKLIST.md  audit-flow-log.md  audit-permissions.md  audit-runbook.md  release-checklist.md
profiles/: app-readonly-full.md  exchange-reader.md  global-reader.md  intune-reader.md  security-reader.md
schemas/: ai_context.schema.json  blocker.schema.json  blockers.schema.json  capability_matrix.schema.json  collector_result.schema.json  finding.schema.json  report_pack.schema.json  run_manifest.schema.json  summary.schema.json  validation.schema.json
scripts/: bootstrap-local-tools.sh  load-local-auth.sh  oss-taint-scan.sh  release-history-reset.sh  select-python.sh  tenant-audit  tenant-audit-flow  tenant-audit-full  tenant-audit-login
tenant-bootstrap/: .gitignore  AGENTS.md  LIVE-RUN-NOTES-2026-04-15-enterprise-lab-max.md  LIVE-RUN-NOTES-2026-04-15.md  README.md  config.enterprise-lab-max.json  config.example.json  requirements.txt  run-bootstrap-azurecli.sh  run-bootstrap.ps1  run-enterprise-audit.sh  run-enterprise-lab-max.sh
test/: DELIVERABLE-CONTRACT.md  FEATURE-INVENTORY.md  KNOWN-GAPS-AND-IMPROVEMENTS.md  README.md  REFERENCE-MAP.md  REVIEW-INSTRUCTIONS.md  VALIDATION-MATRIX.md
tests/: conftest.py  support.py  test_adapters.py  test_app_credentials_collector.py  test_app_credentials_findings.py  test_architecture_modules.py  test_auditex_product.py  test_auth_methods_collector.py  test_auth_namespace.py  test_auth_runtime.py  test_bootstrap.py  test_capability_gated_shape.py  test_capability_gated_stubs.py  (+68 more)
(+208 files in other folders)
