[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auditex"
version = "1.0.0"
description = "Portable AI-first Microsoft 365 audit toolkit for Codex-operated evidence collection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
classifiers = [
    "License :: Other/Proprietary License",
]
dependencies = [
    "requests>=2.31,<3",
    "msal>=1.28,<2",
    "sentry-sdk>=2.47,<3",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1,<2",
]

[project.scripts]
azure-tenant-audit = "azure_tenant_audit.cli:main"
auditex = "auditex.cli:main"
auditex-mcp = "auditex.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"auditex/configs" = ["configs/*.json"]
"auditex/profiles" = ["profiles/*.md"]
"auditex/schemas" = ["schemas/*.json"]
"auditex/agent" = ["agent/*.md", "agent/*.json"]
"auditex/skills/app-readonly-escalation" = ["skills/app-readonly-escalation/SKILL.md"]
"auditex/skills/auditex-operator" = ["skills/auditex-operator/SKILL.md"]
"auditex/skills/delegated-auth" = ["skills/delegated-auth/SKILL.md"]
"auditex/skills/evidence-pack" = ["skills/evidence-pack/SKILL.md"]
"auditex/examples/sample_audit_bundle" = ["examples/sample_audit_bundle/*.json"]
